Emulate 3 Button Mouse option breaks some functionality in other places #40824

Closed
opened 2014-06-26 22:34:58 +02:00 by celanoh · 10 comments

System Information
Windows 7 Ultimate x64 + GTX275

Blender Version
Broken: 2.71

When option "Emulate 3 Button Mouse" is enabled it overrides Weight Gradient painting in Weight Paint mode. Also selecting files in browser with ALT is broken for the same reason.

**System Information** Windows 7 Ultimate x64 + GTX275 **Blender Version** Broken: 2.71 When option "Emulate 3 Button Mouse" is enabled it overrides Weight Gradient painting in Weight Paint mode. Also selecting files in browser with ALT is broken for the same reason.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @celanoh

Added subscriber: @celanoh
Antonis Ryakiotakis was assigned by Sergey Sharybin 2014-06-27 10:31:05 +02:00

Added subscriber: @Sergey

Added subscriber: @Sergey

No idea whether we can solve this in general, but worth looking into some solutions i guess, psy-fi? :)

No idea whether we can solve this in general, but worth looking into some solutions i guess, psy-fi? :)
Member

Added subscriber: @brita

Added subscriber: @brita

Yep, another keypress or even a modal approach can be attempted

Yep, another keypress or even a modal approach can be attempted

Added subscriber: @mont29

Added subscriber: @mont29

I propose for file browser:

  • Ctrl Click does toggle
  • Shift does fill select
    (similar to OSs)
  • double click does rename
  • Enter does execute

For weight painting I am slightly inclined to define a filling tool to make it more consistent with texture painting too.

I propose for file browser: * Ctrl Click does toggle * Shift does fill select (similar to OSs) * double click does rename * Enter does execute For weight painting I am slightly inclined to define a filling tool to make it more consistent with texture painting too.

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'

I don't think we can do changes easily here, closing for now. Gradient tool is always available in the toolbar anyway. For file browser I don't think we can do much without completely changing the interaction system. I tried a windows-like scheme but it created a completely different keymap.

It's likely todo for a keymap redesign, if any. In the meantime, users can always change their keymaps.

I don't think we can do changes easily here, closing for now. Gradient tool is always available in the toolbar anyway. For file browser I don't think we can do much without completely changing the interaction system. I tried a windows-like scheme but it created a completely different keymap. It's likely todo for a keymap redesign, if any. In the meantime, users can always change their keymaps.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40824
No description provided.