Partial fix of T40824,

Fill selection for file browser moves to ctrl-shift click due to
collision with emulate middle mouse button option